--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   font_awesome_flutter: ^10.6.0
   google_fonts: ^6.1.0
+  carousel_slider: ^4.2.1
+  shimmer: ^3.0.0
+  get: ^4.6.6
+  get_storage: ^2.1.1
 
 
 dev_dependencies:
