--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   shimmer: ^3.0.0
   get: ^4.6.6
   get_storage: ^2.1.1
+  provider: ^6.1.1
+  image_picker: ^1.0.4
 
 
 dev_dependencies:
