--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get_storage: ^2.1.1
   provider: ^6.1.1
   image_picker: ^1.0.4
+  email_validator: ^2.1.17
 
 
 dev_dependencies:
