--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.1.2 <4.0.0'
+  sdk: ">=3.1.2 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -44,6 +44,10 @@ dependencies:
   provider: ^6.1.1
   image_picker: ^1.0.4
   email_validator: ^2.1.17
+  open_file: ^3.3.2
+  file_picker: ^6.1.1
+  google_maps_flutter: ^2.5.0
+  dio: ^5.3.4
 
 
 dev_dependencies:
